objects/EXPRN__Account_Aging__c.object
<CustomObject>
    <fields>
        <fullName>EXPRN__Account_Aging_Detail__c</fullName>
        <label>Account Aging Detail</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Aging</relationshipLabel>
        <relationshipName>Account_Agings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EXPRN__Aging_Date__c</fullName>
        <label>Aging Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPRN__Avg_DBT__c</fullName>
        <label>Avg DBT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EXPRN__Balance__c</fullName>
        <formula>EXPRN__X121_150__c +  EXPRN__X1_30__c +  EXPRN__X151_180__c +  EXPRN__X181__c +  EXPRN__X31_60__c +  EXPRN__X61_90__c +  EXPRN__X91_120__c +  EXPRN__Current__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EXPRN__Current__c</fullName>
        <label>Current</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EXPRN__Date_Of_Last_Activity__c</fullName>
        <label>Date Of Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPRN__Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPRN__X121_150__c</fullName>
        <label>121- 150</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EXPRN__X151_180__c</fullName>
        <label>151- 180</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EXPRN__X181__c</fullName>
        <label>181+</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EXPRN__X1_30__c</fullName>
        <label>1-30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Account Aging</label>
    <nameField>
        <label>Account Aging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Aging</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>